# recipe-reader

./: .env.example  Cargo.toml  README.md
recipes/: chicken_curry.txt  chocolate_chip_cookies.txt  spaghetti_carbonara.txt
src/: main.rs
