[package]
name = "recipe-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
base64 = "0.21"
walkdir = "2.3"
console = "0.15"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
rubato = "0.16.2"
